--- a/AzerBot.csproj
+++ b/AzerBot.csproj
@@ -11,21 +11,6 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -154,17 +139,11 @@
   <ItemGroup>
     <Compile Include="Bot.cs" />
     <Compile Include="Commands\AddQuote.cs" />
-    <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CommandConfiguration.cs" />
     <Compile Include="Commands\CommandResult.cs" />
     <Compile Include="Commands\EatMe.cs" />
-    <Compile Include="Commands\AddQueue.cs" />
-    <Compile Include="Commands\DelayQueue.cs" />
-    <Compile Include="Commands\ReportQueue.cs" />
-    <Compile Include="Commands\RemoveQueue.cs" />
-    <Compile Include="Commands\ReportEatMe.cs" />
     <Compile Include="Commands\RemoveQuote.cs" />
-    <Compile Include="Commands\ReportQuote.cs" />
+    <Compile Include="Commands\Quote.cs" />
     <Compile Include="Commands\Generic.cs" />
     <Compile Include="Commands\Greetings.cs" />
     <Compile Include="Commands\ICommand.cs" />
@@ -175,18 +154,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
-      <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
